# da-toolkit

./: .gitignore  Analysis.py  Dockerfile  LICENSE  README.md  Report.py  config-TEMPLATE.py  config.py  query.sql  requirements.txt  setup.cfg
da_toolkit/: __main__.py  config.py  databases.py  experiments.py
da_toolkit/test/: test_abtest_analysis.py  test_query_bigquery.py  test_query_redshift.py
examples/: Databases.ipynb  Experiments.ipynb  databases.ipynb  experiments.ipynb
examples/queries/: bq_query.sql  experiment_query.sql
src/da_toolkit/: databases.py  experiments.py
tests/: test_abtest_analysis.py  test_query_bigquery.py  test_query_redshift.py
