[metadata]

name = da-toolkit
version = 0.1
author = Krzysztof Durbajło
author_email = krzysztof.durbajlo@brainly.com
description = A package aiming at optimizing daily tasks of Data Analysts at Brainly
long_description = file: README.md
url = ''https://github.com/pypa/sampleproject''
project_urls =
    Bug Tracker = ''https://github.com/pypa/sampleproject/issues''
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src