[metadata]

name = da-toolkit
version = 0.2.0
author = Krzysztof Durbajło
author_email = krzysztof.durbajlo@brainly.com
description = A package aiming at optimizing daily tasks of Data Analysts at Brainly
long_description = file: README.md
url = ''https://github.com/brainly/da-toolkit''
project_urls =
    Bug Tracker = ''https://github.com/brainly/da-toolkit/issues''
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas>=1.2.0
    SQLAlchemy>=1.3.23
    numpy>=1.19.5
    statsmodels>=0.12.2
    scipy>=1.6.3
    google-cloud-bigquery>=2.13.1
    google-cloud-bigquery-storage>=2.3.0
    google-api-core>=1.26.3
    google-auth>=1.28.0
    google-cloud-core>=1.6.0
    google-crc32c>=1.1.2
    google-resumable-media>=1.2.0
    googleapis-common-protos>=1.53.0
    psycopg2-binary==2.8.6
    pyarrow==3.0.0

python_requires = >=3.6

[options.packages.find]
where = src